ajustes em palavras

--- a/conheca-a-historia-do-naame/index.html
+++ b/conheca-a-historia-do-naame/index.html
@@ -208,7 +208,7 @@ img.emoji {
 
 
 
-<p>As edições seguintes, 2020 e 2021, foram realizadas de forma on-line, devido à pandemia da COVID-19.</p>
+<p>As edições seguintes, 2020 e 2021, foram realizadas de forma <em>online</em>, devido à pandemia da COVID-19.</p>
 
 
 
@@ -242,7 +242,11 @@ img.emoji {
 
 
 
-<p>Conheça nossa equipe vigente de 2022 <a href="http://equipe-naame-2022/">clicando aqui</a>. </p>
+<p></p>
+
+
+
+<p></p>
 
 
 
